# SystemsProfiler

./: .gitignore  CMakeLists.txt  README.md  gitignore.txt
include/profiler/: Timer.hpp
src/: main.cpp
